--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -9,6 +9,8 @@
 	</body>
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<script type="text/javascript">
+
+		///initial graph///
 		var NODES = new Array()
 
 		/////for canvas quality/////
@@ -37,13 +39,16 @@
 		}
 		///////////////////////////////
 
+		///define globally cause i use multi function at first///
 		var WINDOWWIDTH = window.innerWidth,
 			WINDOWHEIGHT = window.innerHeight
-		let canvas = createHiDPICanvas(WINDOWWIDTH, WINDOWHEIGHT)
+		// let canvas = createHiDPICanvas(WINDOWWIDTH, WINDOWHEIGHT)
+		let canvas = createHiDPICanvas(1632, 722)
 		var	CANVASWIDTH = parseInt(canvas.style.width, 10),
 			CANVASHEIGHT = parseInt(canvas.style.height, 10)
 		let ctx = canvas.getContext('2d')
 		ctx.font = '20px Georgia'
+		ctx.fillText('Linked Graph', 10, 20)
 
 		function getMatrix()
 		{
@@ -64,37 +69,107 @@
 
 		function createNodes(matrix)
 		{
-			console.log(CANVASWIDTH, CANVASHEIGHT)
-			for(var i = 0; i < matrix.length; i++)
+			// console.log(CANVASWIDTH, CANVASHEIGHT)
+			for(var i = 0; i < matrix[0].length; i++)
 			{
-				var nodeName = '(' + i.toString() + ')'
+				var nodeName = '(' + matrix[0][i].toString() + ')'
 				var nodeX = CANVASWIDTH * (9 / 11 * (Math.random() + 0.1))
 				var nodeY = CANVASHEIGHT * (9 / 11 * (Math.random() + 0.1))
 				ctx.fillText(nodeName, nodeX, nodeY)
-				console.log(nodeName, nodeX, nodeY)
+				// console.log(nodeName, nodeX, nodeY)
 				NODES.push({'nodeX': nodeX, 'nodeY': nodeY})
 			}
 		}
 
 		function createLines(matrix)
 		{
-			for(var i = 0; i < matrix.length; i++)
+			for(var i = 1; i < matrix.length; i++)
 			{
 				for(var j = 0; j < i; j++)
 				{
 					if(matrix[i][j] == 1)
 					{
 						ctx.beginPath()
-						ctx.moveTo(NODES[i].nodeX, NODES[i].nodeY)
-						ctx.lineTo(NODES[j].nodeX, NODES[j].nodeY)
+						ctx.moveTo(NODES[i - 1].nodeX + 17, NODES[i - 1].nodeY - 5)
+						ctx.lineTo(NODES[j].nodeX + 17, NODES[j].nodeY - 5)
 						ctx.stroke()
 					}
 				}
 			}
 		}
+		///initial graph///
+
+		///linked graph///
+		function getPathedGraph()
+		{
+			let json_file = 'result_20201116_032636.json' // can change later
+			let url = 'http://127.0.0.1:5000/getJsonLink/' + json_file
+			fetch(url)
+				.then((response) => {
+					return response.json()
+				}).then((linkAndPath) => {
+					// console.log(linkAndPath.path)
+					for(var i = 0; i < linkAndPath.path.length; i++)
+						generatePathedGraph(i, linkAndPath.link, linkAndPath.path[i])
+				})
+		}
+
+		function generatePathedGraph(number, link, path)
+		{
+			console.log(path)
+			let pathedGraphCanvas = createHiDPICanvas(1632, 722)
+			var	CANVASWIDTH = parseInt(pathedGraphCanvas.style.width, 10),
+				CANVASHEIGHT = parseInt(pathedGraphCanvas.style.height, 10)
+			let ctx = pathedGraphCanvas.getContext('2d')
+			ctx.font = '20px Georgia'
+			ctx.fillText('Path Method ' + number.toString(), 10, 20)
+			
+			/// draw remained link ///
+			// console.log(link)
+			ctx.strokeStyle = '#D0D0D0'
+			ctx.lineWidth = 1
+			for(var i = 0; i < link.length; i++)
+			{
+				var targetLink = link[i]
+				var startNode = targetLink[0],
+					destinationNode = targetLink[1]
+				ctx.beginPath()
+				ctx.moveTo(NODES[startNode].nodeX + 17, NODES[startNode].nodeY - 5)
+				ctx.lineTo(NODES[destinationNode].nodeX + 17, NODES[destinationNode].nodeY - 5)
+				ctx.stroke()
+			}
+
+			/// draw path ///
+			ctx.strokeStyle = '#FF0000'
+			ctx.fillStyle = '#0000C6'
+			ctx.font = '20px Georgia bold'
+			ctx.lineWidth = 3
+			for(var i = 0; i < path.link.length; i++)
+			{
+				var targetLink = link[path.link[i]]
+				// console.log(targetLink)
+				var startNode = targetLink[0],
+					destinationNode = targetLink[1]
+				ctx.beginPath()
+				ctx.moveTo(NODES[startNode].nodeX + 17, NODES[startNode].nodeY - 5)
+				ctx.lineTo(NODES[destinationNode].nodeX + 17, NODES[destinationNode].nodeY - 5)
+				ctx.stroke()
+				ctx.fillText(path.capacity[i], (NODES[startNode].nodeX + NODES[destinationNode].nodeX) / 2, (NODES[startNode].nodeY + NODES[destinationNode].nodeY) / 2)
+			}
+
+			/// draw nodes ///
+			ctx.fillStyle = '#000000'
+			ctx.font = '20px Georgia'
+			for(var i = 0; i < NODES.length; i++)
+			{
+				ctx.fillText('(' + i + ')', NODES[i].nodeX, NODES[i].nodeY)
+			}
+			
+		}
 
 		$(document).ready(function() {
-			getMatrix()
+			getMatrix() // initial graph
+			getPathedGraph() // path added
 		})
 	</script>
 </html>
