--- a/DeployModel/code/visualize/test.html
+++ b/DeployModel/code/visualize/test.html
@@ -29,7 +29,7 @@
 	    can.style.height = h + "px";
 	    can.getContext("2d").setTransform(ratio, 0, 0, ratio, 0, 0);
 	    var parent = document.getElementById("layout-content");
-		parent.appendChild(can)
+		parent.appendChild(can);
 	}
 
 	//Create canvas with the device resolution.
