--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -73,6 +73,8 @@
 			<hr>
 			<button class="btn btn-dark" id="show-method" style="display: inline;">Show Graph</button>
 			<button class="btn btn-dark" id="close-method" style="display: inline">Close Graph</button>
+			
+			<p class="text-dark text-justify" id="method-text" style="margin: 20px;"></p>
 			<div id="graph" class="graph" style="display: none; margin: 20px"></div>
 		</div>
 	</body>
