--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -43,7 +43,7 @@
 			</div>
 		</nav>
 		<div class="container">
-			<form style="margin:20px">
+			<div style="margin:20px">
 				<div class="form-group row">
 				  	<label for="iter-times" class="col-sm-2 col-form-label">Iter Times</label>
 				  	<div class="col-sm-10">
@@ -69,7 +69,7 @@
 					</div>
 				</div>			
 				<button class="btn btn-dark" id="cal-path">Calculate Path</button>
-			</form>
+			</div>
 			<hr>
 			<button class="btn btn-dark" id="show-method" style="display: inline;">Show Graph</button>
 			<button class="btn btn-dark" id="close-method" style="display: inline">Close Graph</button>
@@ -80,6 +80,8 @@
 	</body>
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
+	
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<!-- <script type="text/javascript" src="js/canvas.js"></script> -->
