center show and close button

--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -71,8 +71,10 @@
 				<button class="btn btn-dark" id="cal-path">Calculate Path</button>
 			</div>
 			<hr>
-			<button class="btn btn-dark" id="show-method" style="display: inline;">Show Graph</button>
-			<button class="btn btn-dark" id="close-method" style="display: inline">Close Graph</button>
+			<div class="d-flex justify-content-center">
+				<button class="btn btn-dark mr-2" id="show-method">Show Graph</button>
+				<button class="btn btn-dark" id="close-method">Close Graph</button>
+			</div>
 			
 			<p class="text-dark text-justify" id="method-text" style="margin: 20px;"></p>
 			<div id="graph" class="graph" style="margin: 20px"></div>
