--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -1,91 +1,127 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Deploy Model</title>
-		<link rel="stylesheet" type="text/css" href="css/index.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <head>
+    <title>Deploy Model</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+      <a class="navbar-brand text-light" href="#">Deploy Model</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-	</head>
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-			<a class="navbar-brand text-light" href="#">Deploy Model</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			  	<span class="navbar-toggler-icon"></span>
-			</button>
-		  
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			  	<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-				  	<a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
-				</li>
-				<!-- <li class="nav-item">
-				  	<a class="nav-link" href="#">Link</a>
-				</li> -->
-				<!-- <li class="nav-item dropdown">
-				  	<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Dropdown
-				  	</a>
-				  	<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
-				  	</div>
-				</li>
-				<li class="nav-item">
-				  	<a class="nav-link disabled" href="#">Disabled</a>
-				</li>
-				</ul>
-				<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-				</form> -->
-			</div>
-		</nav>
-		<div class="container">
-			<div style="margin:20px">
-				<div class="form-group row">
-				  	<label for="iter-times" class="col-sm-2 col-form-label">Iter Times</label>
-				  	<div class="col-sm-10">
-						<input type="text" class="form-control" id="iter-times" placeholder="100">
-				  	</div>
-				</div>
-				<div class="form-group row">
-					<label for="start-node" class="col-sm-2 col-form-label">Start Node ID</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="start-node" placeholder="0">
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="dest-node" class="col-sm-2 col-form-label">Dest Node ID</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="dest-node" placeholder="1">
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="config-loc" class="col-sm-2 col-form-label">Config Location</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="config-loc" placeholder="./config.txt">
-					</div>
-				</div>			
-				<button class="btn btn-dark" id="cal-path">Calculate Path</button>
-			</div>
-			<hr>
-			<div class="d-flex justify-content-center">
-				<button class="btn btn-dark mr-2" id="show-method">Show Graph</button>
-				<button class="btn btn-dark" id="close-method">Close Graph</button>
-			</div>
-			
-			<p class="text-dark text-justify" id="method-text" style="margin: 20px;"></p>
-			<div id="graph" class="graph" style="margin: 20px"></div>
-		</div>
-	</body>
-	
-	<script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" data-auto-replace-svg="nest"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
-	
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	<!-- <script type="text/javascript" src="js/canvas.js"></script> -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link text-light" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <div style="margin: 20px">
+        <div class="form-group row">
+          <label for="iter-times" class="col-sm-2 col-form-label"
+            >Iter Times</label
+          >
+          <div class="col-sm-10">
+            <input
+              type="text"
+              class="form-control"
+              id="iter-times"
+              placeholder="100"
+            />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="start-node" class="col-sm-2 col-form-label"
+            >Start Node ID</label
+          >
+          <div class="col-sm-10">
+            <input
+              type="text"
+              class="form-control"
+              id="start-node"
+              placeholder="0"
+            />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="dest-node" class="col-sm-2 col-form-label"
+            >Dest Node ID</label
+          >
+          <div class="col-sm-10">
+            <input
+              type="text"
+              class="form-control"
+              id="dest-node"
+              placeholder="1"
+            />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="config-loc" class="col-sm-2 col-form-label"
+            >Config Location</label
+          >
+          <div class="col-sm-10">
+            <input
+              type="text"
+              class="form-control"
+              id="config-loc"
+              placeholder="./config.txt"
+            />
+          </div>
+        </div>
+        <button class="btn btn-dark" id="cal-path">Calculate Path</button>
+      </div>
+      <hr />
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-dark mr-2" id="show-method">Show Graph</button>
+        <button class="btn btn-dark" id="close-method">Close Graph</button>
+      </div>
+
+      <p
+        class="text-dark text-justify"
+        id="method-text"
+        style="margin: 20px"
+      ></p>
+      <div id="graph" class="graph" style="margin: 20px"></div>
+    </div>
+  </body>
+
+  <script
+    src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
+    data-auto-replace-svg="nest"
+  ></script>
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"
+  ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70/jquery.blockUI.min.js"></script>
+
+  <script
+    src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"
+  ></script>
+  <script type="text/javascript" src="js/main.js"></script>
+  <!-- <script type="text/javascript" src="js/canvas.js"></script> -->
 </html>
