--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -89,20 +89,20 @@
             />
           </div>
         </div>
-        <button class="btn btn-dark" id="cal-path">Calculate Path</button>
+        <div class="text-center">
+          <button class="btn btn-dark" id="cal-path">Calculate Path</button>
+        </div>
       </div>
       <hr />
-      <div class="d-flex justify-content-center">
+      <!-- <div class="d-flex justify-content-center">
         <button class="btn btn-dark mr-2" id="show-method">Show Graph</button>
         <button class="btn btn-dark" id="close-method">Close Graph</button>
-      </div>
+			</div> -->
 
-      <p
-        class="text-dark text-justify"
-        id="method-text"
-        style="margin: 20px"
-      ></p>
-      <div id="graph" class="graph" style="margin: 20px"></div>
+      <div id="total-graph" class="mt-3 text-center"></div>
+
+      <div class="text-dark text-justify text-center" id="method-text"></div>
+      <div id="graph" class="mt-3 text-center d-none"></div>
     </div>
   </body>
 
