--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -101,7 +101,11 @@
 
       <div id="total-graph" class="mt-3 text-center"></div>
 
-      <div class="text-dark text-justify text-center" id="method-text"></div>
+      <div
+        class="text-dark d-flex justify-content-center text-center"
+        id="method-text"
+      ></div>
+      <div class="text-center" id="path-info-block"></div>
       <div id="graph" class="mt-3 text-center d-none"></div>
     </div>
   </body>
