--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -103,7 +103,7 @@
 
       <div
         class="text-dark d-flex justify-content-center text-center"
-        id="method-text"
+        id="path-text"
       ></div>
       <div class="text-center" id="path-info-block"></div>
       <div id="graph" class="mt-3 text-center d-none"></div>
