--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -43,7 +43,8 @@
           >
           <div class="col-sm-10">
             <input
-              type="text"
+              type="number"
+              min="0"
               class="form-control"
               id="iter-times"
               placeholder="100"
@@ -56,7 +57,8 @@
           >
           <div class="col-sm-10">
             <input
-              type="text"
+              type="number"
+              min="0"
               class="form-control"
               id="start-node"
               placeholder="0"
@@ -69,14 +71,80 @@
           >
           <div class="col-sm-10">
             <input
-              type="text"
+              type="number"
+              min="0"
               class="form-control"
               id="dest-node"
               placeholder="1"
             />
           </div>
         </div>
+
         <div class="form-group row">
+          <label for="int-N" class="col-sm-2 col-form-label">User Count</label>
+          <div class="col-sm-10">
+            <input
+              type="number"
+              min="1"
+              class="form-control"
+              id="int-N"
+              value="1"
+            />
+          </div>
+        </div>
+        <div class="form-group row N-ints-block">
+          <label class="col-sm-2 col-form-label">Traffic</label>
+          <div class="col-sm-10">
+            <div class="row">
+              <div class="col-sm">
+                <input type="number" min="0" class="form-control N-ints-1" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="form-group row N-ints-block">
+          <label class="col-sm-2 col-form-label">Path Count</label>
+          <div class="col-sm-10">
+            <div class="row">
+              <div class="col-sm">
+                <input type="number" min="0" class="form-control N-ints-two" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="NodeR" class="col-sm-2 col-form-label">NodeR</label>
+          <div class="col-sm-10">
+            <input type="number" min="0" class="form-control" id="NodeR" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="NodeO" class="col-sm-2 col-form-label">NodeO</label>
+          <div class="col-sm-10">
+            <input type="number" min="0" class="form-control" id="NodeO" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="NodeP" class="col-sm-2 col-form-label">NodeP</label>
+          <div class="col-sm-10">
+            <input type="number" min="0" class="form-control" id="NodeP" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="NodeQ" class="col-sm-2 col-form-label">NodeQ</label>
+          <div class="col-sm-10">
+            <input type="number" min="0" class="form-control" id="NodeQ" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="NodeS" class="col-sm-2 col-form-label">NodeS</label>
+          <div class="col-sm-10">
+            <input type="number" min="0" class="form-control" id="NodeS" />
+          </div>
+        </div>
+
+        <!-- <div class="form-group row">
           <label for="config-loc" class="col-sm-2 col-form-label"
             >Config Location</label
           >
@@ -88,7 +156,7 @@
               placeholder="./config.txt"
             />
           </div>
-        </div>
+        </div> -->
         <div class="text-center">
           <button class="btn btn-dark" id="cal-path">Calculate Path</button>
         </div>
