--- a/DeployModel/code/visualize/index.html
+++ b/DeployModel/code/visualize/index.html
@@ -97,7 +97,11 @@
           <div class="col-sm-10">
             <div class="row">
               <div class="col-sm">
-                <input type="number" min="0" class="form-control N-ints-1" />
+                <input
+                  type="number"
+                  min="0"
+                  class="form-control N-ints N-ints-1"
+                />
               </div>
             </div>
           </div>
@@ -107,7 +111,11 @@
           <div class="col-sm-10">
             <div class="row">
               <div class="col-sm">
-                <input type="number" min="0" class="form-control N-ints-two" />
+                <input
+                  type="number"
+                  min="0"
+                  class="form-control N-ints N-ints-two"
+                />
               </div>
             </div>
           </div>
